--- a/AutoSKL.ipynb
+++ b/AutoSKL.ipynb
@@ -57,7 +57,7 @@
         "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
         "        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
         "  \n",
-        "        autoslk = AutoSklearnRegressor(time_left_for_this_task=30)\n",
+        "        autoslk = AutoSklearnRegressor()\n",
         "        autoslk.fit(X_train, y_train)\n",
         "\n",
         "        y_pred  = autoslk.predict(X_test)\n",
