--- a/H2O.ipynb
+++ b/H2O.ipynb
@@ -42,7 +42,7 @@
         "import numpy as np\n",
         "from glob import glob\n",
         "import os\n",
-        "from sklearn.model_selection import train_test_split, RepeatedKFold\n",
+        "from sklearn.model_selection import RepeatedKFold\n",
         "\n",
         "from h2o.sklearn import H2OAutoMLRegressor\n",
         "\n",
