--- a/AutoSKL.ipynb
+++ b/AutoSKL.ipynb
@@ -25,11 +25,8 @@
         "import numpy as np\n",
         "from glob import glob\n",
         "import os\n",
-        "from sklearn.model_selection import train_test_split, RepeatedKFold\n",
+        "from sklearn.model_selection import RepeatedKFold\n",
         "\n",
-        "from sklearn.metrics import mean_absolute_error\n",
-        "\n",
-        "import sklearn\n",
         "from autosklearn.regression import AutoSklearnRegressor\n",
         "\n",
         "import warnings\n",
