--- a/TPOT.ipynb
+++ b/TPOT.ipynb
@@ -33,11 +33,8 @@
         "import numpy as np\n",
         "from glob import glob\n",
         "import os\n",
-        "from sklearn.model_selection import train_test_split, RepeatedKFold\n",
+        "from sklearn.model_selection import RepeatedKFold\n",
         "\n",
-        "from sklearn.metrics import mean_absolute_error\n",
-        "\n",
-        "import sklearn\n",
         "from tpot import TPOTRegressor\n",
         "\n",
         "import warnings\n",
@@ -46,7 +43,7 @@
       "metadata": {
         "id": "4DvAt24tiHHv"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +62,7 @@
         "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
         "        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
         "  \n",
-        "        tpot = TPOTRegressor()\n",
+        "        tpot = TPOTRegressor(max_time_mins=1)\n",
         "        tpot.fit(X_train, y_train)\n",
         "\n",
         "        y_pred  = tpot.predict(X_test)\n",
